Code cleanup and replaced stacktraces with logger.
git-svn-id: https://qr4vaadin.googlecode.com/svn/trunk@15 5a0efd69-1c03-8678-13a6-9e749fae5651